--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "razzle": "^3.0.0",
     "react": "^16.12.0",
+    "react-chat-elements": "^10.8.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1"
