--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^7.5.0",
     "razzle": "^3.0.0",
     "react": "^16.12.0",
     "react-chat-elements": "^10.8.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1"
   },
